Labels is now showing on the panel tab

--- a/src/Panels.scss
+++ b/src/Panels.scss
@@ -19,7 +19,7 @@
   padding: 2em;
   
   width: 35vw;
-  background-color: #ebecf0;
+  background-color: #EBECF0;
   border-radius: 5px;
   position: relative;
   z-index: 51;
@@ -74,7 +74,7 @@
   width: 80%;
   border: none;
   font-size: 16px;
-  background-color: lightgrey;
+  background-color: #E3E6EA;
   padding: .9em;
   border-radius: 10px;
 
