--- a/src/SelectLabels.scss
+++ b/src/SelectLabels.scss
@@ -13,7 +13,6 @@
     background-color: red;
     border-radius: 5px;
     margin-right: 5px;
-
   }
 
   .selectLabels__addLabel {
@@ -25,5 +24,44 @@
     height: 30px;
     border-radius: 5px;
     background-color: lightgray;
+  }
+}
+
+.selectLabels__labelSelection {
+  position: relative;
+  .selectLabels__labelList {
+    width: 300px;
+    position: absolute;
+    margin-top: 5px;
+    background-color: white;
+    border-radius: 10px;
+    padding: 1em;
+
+    h4 {
+      margin-bottom: 20px;
+      font-weight: normal;
+    }
+
+    hr {
+      margin-bottom: 20px;
+    }
+
+    .selectedLabels__labelInList {
+      display: flex;
+      align-items: center;
+      flex-direction: row-reverse;
+      width: 100%;
+      height: 35px;
+      border-radius: 5px;
+      cursor: pointer;
+      margin-bottom: 10px;
+
+      .selectedLabels__check {
+          color: white;
+          margin-right: 10px;
+      }
+    }
+
+
   }
 }
