--- a/src/Cards.scss
+++ b/src/Cards.scss
@@ -1,5 +1,5 @@
 .cards {
-  background-color: #EBECF0;
+  background-color: #ebecf0;
   width: 300px;
   min-height: 180px;
   padding: 1em;
@@ -26,21 +26,39 @@
   }
 
   .cards__wrapper {
-
     width: 100%;
     height: 100%;
-    .cards__element {
-      cursor: pointer;
 
+    .cards__element {
+      position: relative;
+      cursor: pointer;
       background-color: white;
       padding: 1em;
       border-radius: 10px;
       font-size: 0.9em;
       margin-bottom: 20px;
       box-shadow: 0px 1px 0px 0px rgba(0, 0, 0, 0.1);
+      position: relative;
+      z-index: 5;
 
+      .cards__pen {
+        display: none;
+        padding: 0.5em;
+        position: absolute;
+        border-radius: 10px;
+        right: 10px;
+        bottom: 5px;
+        z-index: 100;
+      }
       &:hover {
-        background-color: #ebecf0;
+        .cards__pen {
+          float: right;
+          display: block;
+
+          &:hover {
+            background-color: #c9cacb;
+          }
+        }
       }
 
       .cards__labels {
