--- a/src/Panels.scss
+++ b/src/Panels.scss
@@ -69,9 +69,10 @@
 
 
 .panel__textDescription {
-  resize: none;
+  resize: inherit;
   font-family: inherit;
   width: 80%;
+  height: 100%;
   border: none;
   font-size: 16px;
   background-color: #E3E6EA;
