--- a/src/Cards.scss
+++ b/src/Cards.scss
@@ -26,10 +26,13 @@
   }
 
   .cards__wrapper {
-    width: 100%;
-    height: 100%;
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+      width: 100% inherit;
 
     .cards__element {
+
       position: relative;
       cursor: pointer;
       background-color: white;
@@ -38,16 +41,29 @@
       font-size: 0.9em;
       margin-bottom: 20px;
       box-shadow: 0px 1px 0px 0px rgba(0, 0, 0, 0.1);
-      position: relative;
       z-index: 5;
+
+      .cards__labels {
+        display: flex;
+        flex-wrap: wrap;
+        width: 90%;
+        margin-bottom: 10px;
+
+        .cards__label {
+          width: 40px;
+          margin-bottom: 5px;
+          margin-right: 3px;
+          height: 8px;
+          border-radius: 10px;
+        }
+      }
 
       .cards__pen {
         display: none;
-        padding: 0.5em;
         position: absolute;
         border-radius: 10px;
-        right: 10px;
-        bottom: 5px;
+        right: 15px;
+        bottom: 10px;
         z-index: 100;
       }
       &:hover {
@@ -61,18 +77,7 @@
         }
       }
 
-      .cards__labels {
-        display: flex;
-        width: 100%;
-        margin-bottom: 10px;
 
-        .cards__label {
-          width: 40px;
-          margin-right: 3px;
-          height: 8px;
-          border-radius: 10px;
-        }
-      }
     }
   }
   .cards__addCard {
@@ -108,19 +113,17 @@
     display: flex;
     align-items: center;
 
-    button {
-      padding: 10px;
-      width: 80px;
-      border: none;
-      background-color: #60bd4e;
-      border-radius: 5px;
-      margin-right: 10px;
-      color: white;
-      cursor: pointer;
+    .cards_save {
+
+
+      background-color: #60bd4e !important;
+      color: white !important;
+      
+      margin-right: 15px;
     }
     .cards__cross {
       color: grey;
-      cursor: pointer;
+
     }
   }
 }
