--- a/src/SelectLabels.scss
+++ b/src/SelectLabels.scss
@@ -32,6 +32,7 @@
 
 .selectLabels__labelSelection {
   position: relative;
+  z-index: 100;
   .selectLabels__labelList {
     width: 300px;
     position: absolute;
