--- a/src/Cards.scss
+++ b/src/Cards.scss
@@ -43,6 +43,13 @@
       box-shadow: 0px 1px 0px 0px rgba(0, 0, 0, 0.1);
       z-index: 5;
 
+      .cards__downElements {
+        margin-top: 15px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+      }
+
       .cards__labels {
         display: flex;
         flex-wrap: wrap;
@@ -60,15 +67,11 @@
 
       .cards__pen {
         display: none;
-        position: absolute;
-        border-radius: 10px;
-        right: 15px;
-        bottom: 10px;
-        z-index: 100;
+
       }
       &:hover {
         .cards__pen {
-          float: right;
+          // float: right;
           display: block;
 
           &:hover {
