Refactoring with more material-ui components

--- a/src/App.scss
+++ b/src/App.scss
@@ -4,6 +4,9 @@
  
 }
 
+$greenValidation: #4caf50; 
+$redMissing : #f44336;
+
 body {
   background-image: url("https://trello-backgrounds.s3.amazonaws.com/SharedBackground/2398x1600/cd83404cfdd2d2134bb640ba6d75bd26/photo-1590421958459-071ca4271af6.jpg");
 }
