pushing Checklist to his own component + cleanup

--- a/src/Panels.scss
+++ b/src/Panels.scss
@@ -1,9 +1,13 @@
 .panel {
   min-width: 35vw;
+  margin-top: 20%;
+  margin-bottom: 5%;
+
 
   .panel__form {
     padding: 2em;
     background-color: #ebecf0;
+  
   }
 
   .panel__icon {
