--- a/src/Cards.scss
+++ b/src/Cards.scss
@@ -4,8 +4,7 @@
   background-color: #ebecf0 !important;
   max-width: 290px;
   min-height: 180px;
-  position: relative;
-  z-index: 50;
+  margin: 50px 0px 0px 50px;
 
   .cards__header {
     padding: 0.1em 0.5em 0.7em 0.5em;
@@ -20,7 +19,6 @@
       }
     }
   }
-
   .cards__element {
     position: relative;
     margin-bottom: 7px;
@@ -71,5 +69,5 @@
 }
 
 .cards__textInput {
-  margin-bottom: 20px !important;
+  margin: 10px 0px 15px 0px !important;
 }
